--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: suraksha-postgres
     restart: always
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: suraksha
+      POSTGRES_USER: suraksha_user
+      POSTGRES_PASSWORD: supersecret
     ports:
       - "5433:5432"
     volumes:
