--- a/suraksha/src/main/resources/application.properties
+++ b/suraksha/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=suraksha
-spring.datasource.url=jdbc:h2:mem:suraksha
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5433/my_database
+spring.datasource.username=admin
+spring.datasource.password=securepassword
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
