feat: Add RabbitMQ configuration for email processing with exchange, queue, and binding

--- a/suraksha/pom.xml
+++ b/suraksha/pom.xml
@@ -101,7 +101,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-	</dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-stream</artifactId>
+		</dependency>
+	
+ </dependencies>
 
 	<build>
 		<plugins>
