feat: Implement email sending functionality using Nodemailer and dotenv, processing mail requests from RabbitMQ.

--- a/microservices/mail-service/package.json
+++ b/microservices/mail-service/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.10.9"
+    "amqplib": "^0.10.9",
+    "dotenv": "^17.2.3",
+    "nodemailer": "^7.0.11"
   }
 }
